Added Login and Logout buttons

--- a/ContactsManager.UI/Views/Persons/Edit.cshtml
+++ b/ContactsManager.UI/Views/Persons/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@model PersonUpdateRequest
 @{
     ViewBag.Title = "Edit Person";
+    ViewBag.CurrentUrl = "~/Persons/Edit";
 }
 
 <a asp-controller="Persons" asp-action="Index" class="link-hover">Back to Persons List</a>
