--- a/ContactsManager.UI/Views/Countries/UploadFromExcel.cshtml
+++ b/ContactsManager.UI/Views/Countries/UploadFromExcel.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Upload Countries from Excel";
+    ViewBag.CurrentUrl = "~/Countries/UploadFromExcel";
 }
 
 <h2>@ViewBag.Title</h2>
