--- a/ContactsManager.UI/Views/Persons/Create.cshtml
+++ b/ContactsManager.UI/Views/Persons/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model PersonAddRequest
 @{
     ViewBag.Title = "Create Person";
+    ViewBag.CurrentUrl = "~/Persons/Create";
 }
 
 <a asp-controller="Persons" asp-action="Index" class="link-hover">Back to Persons List</a>
