--- a/ContactsManager.UI/Views/Persons/Delete.cshtml
+++ b/ContactsManager.UI/Views/Persons/Delete.cshtml
@@ -1,6 +1,7 @@
 ﻿@model PersonResponse
 @{
     ViewBag.Title = "Delete Person";
+    ViewBag.CurrentUrl = "~/Persons/Delete";
 }
 
 <a asp-controller="Persons" asp-action="Index" method="get" class="link-hover">Back to Persons List</a>
